# qwha

./: .gitignore  README.md  pyproject.toml  requirements.yaml
MagR/: LICENSE  MagR.py  README.md  datautils.py  llama.py  mistral.py  optq.py  quant.py  quant.sh  requirements.txt
peft/: setup.py
peft/src/peft/: __init__.py  import_utils.py  mapping.py  peft_model.py
peft/src/peft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
peft/src/peft/tuners/: __init__.py
peft/src/peft/tuners/fourierft/: config.py  hadamard.py  layer.py  model.py
peft/src/peft/tuners/lora/: gptq.py
peft/src/peft/tuners/qhft/: __init__.py  config.py  layer.py  model.py
peft/src/peft/utils/: constants.py  other.py  peft_types.py  save_and_load.py
src/: utils.py
src/eval/: __init__.py  commonsenseqa_test.py  math_test.py  perplexity_test.py
src/init/: init.sh  initialize.py
src/sft/: SFT.py  test_gsm8k.py  test_gsm8k.sh  train_alpaca.sh  train_gsm8k.py  train_gsm8k.sh
