[project]
name = "qhft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "click==8.1.8",
    "datasets==3.4.1",
    "device-smi==0.4.1",
    "fast-hadamard-transform",
    "fire==0.7.0",
    "huggingface-hub==0.31.1",
    "joblib==1.4.2",
    "lm-eval==0.4.8",
    "logbar==0.0.4",
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "openai==0.28.0",
    "optimum==1.24.0",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pyarrow==19.0.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentencepiece==0.2.0",
    "tabulate==0.9.0",
    "tokenicer==0.0.4",
    "tokenizers==0.21.1",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "triton>=3.1.0",
    "wandb==0.19.9",
]

[tool.uv.sources]
fast-hadamard-transform = { git = "https://github.com/Dao-AILab/fast-hadamard-transform.git", rev = "v1.0.4.post1" }
